<resources>
    <string name="app_name">My Application</string>
    <string name="Accessories">Accessories</string>
    <string name="PRODUCTS">PRODUCTS</string>
    <string name="service">Service</string>
    <string name="Register">Register</string>
    <string name="donate">donate</string>
    <string name="title_activity_slider">SliderActivity</string>

    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


</resources>