<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="332dp"
        android:layout_height="275dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:src="@drawable/pic_7" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="123dp"
        android:layout_height="101dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="80dp"
        android:fitsSystemWindows="true"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/pic_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.414" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="111dp"
        android:layout_height="90dp"
        android:layout_marginBottom="228dp"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        android:src="@drawable/pic_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toEndOf="@+id/imageButton6"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="105dp"
        android:layout_height="18dp"
        android:layout_marginBottom="300dp"
        android:text="@string/PRODUCTS"
        android:textColor="#072C61"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="@+id/imageButton7"
        app:layout_constraintTop_toTopOf="@+id/imageButton7" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="108dp"
        android:layout_height="88dp"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        android:src="@drawable/pic_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.227" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="83dp"
        android:layout_height="16dp"
        android:text="@string/Accessories"
        android:textColor="#072C61"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="102dp"
        android:layout_height="81dp"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7"
        app:layout_constraintVertical_bias="0.241"
        android:src="@drawable/pic_10" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="69dp"
        android:layout_height="15dp"
        android:layout_marginTop="44dp"
        android:text="@string/service"
        android:textColor="#072C61"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="117dp"
        android:layout_height="103dp"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        android:src="@drawable/pic_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="54dp"
        android:layout_height="19dp"
        android:layout_marginBottom="84dp"
        android:text="@string/Register"
        android:textColor="#072C61"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="79dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/donate"
        android:textColor="#072C61"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageButton6"
        app:layout_constraintTop_toTopOf="@+id/imageButton6" />

</androidx.constraintlayout.widget.ConstraintLayout>